# win32-region-window

./: .gitignore  CMakeLists.txt  README.md  local-build.cmd  region.cpp  region.dsp  region.dsw  region.h
python-samples/: install-package.cmd  main.py  oGUI.py  run.cmd
src/: main.cpp  main.v2.cpp  main.v3.cpp  skin.cpp  skin.h
